Change license to MIT

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "webpack"
   ],
   "author": "Soar Lin <soar.lin@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
