--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "NODE_ENV=development webpack-dev-server --mode development --config webpack.config.js --open",
-    "build": "NODE_ENV=production webpack --mode production --config webpack.config.js"
+    "dev": "webpack-dev-server --mode development --config webpack.config.js --open",
+    "build": "webpack --mode production --config webpack.config.js"
   },
   "keywords": [
     "pug",
@@ -18,20 +18,15 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
-    "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
-    "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "html-webpack-pug-plugin": "^2.0.0",
     "image-webpack-loader": "^6.0.0",
     "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
