--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack-dev-server --mode development --config webpack.config.js --open",
-    "build": "webpack --mode production --config webpack.config.js"
+    "dev": "webpack-dev-server --env development --mode development --config webpack.config.js --open",
+    "build": "webpack --env production --mode production --config webpack.config.js"
   },
   "keywords": [
     "pug",
