--- a/package.json
+++ b/package.json
@@ -16,29 +16,33 @@
   "author": "Soar Lin <soar.lin@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.6.0",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "html-webpack-pug-plugin": "^2.0.0",
+    "file-loader": "^6.2.0",
+    "glob-parent": "^6.0.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-pug-plugin": "^2.0.1",
     "image-webpack-loader": "^6.0.0",
+    "node-forge": ">=0.10.0",
     "node-sass": "^4.14.1",
+    "normalize-url": ">=4.5.1",
+    "pug": "^3.0.2",
     "pug-html-loader": "^1.1.5",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.3.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.10.4",
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1"
+    "@babel/polyfill": "^7.12.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0"
   }
 }
