--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "trim-newlines": ">=3.0.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
