--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "webpack-dev-server --env development --mode development --config webpack.config.js --open",
-    "build": "webpack --env production --mode production --config webpack.config.js"
+    "build": "webpack --env production --mode production --config webpack.config.js",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "keywords": [
     "pug",
@@ -23,6 +24,7 @@
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.6.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.2",
     "glob-parent": "^6.0.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.2",
@@ -35,11 +37,11 @@
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.3.0",
+    "trim-newlines": ">=3.0.1",
     "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "trim-newlines": ">=3.0.1"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
