--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "html-webpack-pug-plugin": "^2.0.1",
     "image-webpack-loader": "^6.0.0",
     "node-forge": ">=0.10.0",
-    "node-sass": "^7.0.0",
     "normalize-url": ">=4.5.1",
     "pug": "^3.0.2",
     "pug-html-loader": "^1.1.5",
@@ -46,6 +45,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "bootstrap": "^4.6.0",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "sass": "^1.52.3"
   }
 }
