--- a/package.json
+++ b/package.json
@@ -18,28 +18,29 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@webpack-cli/serve": "^2.0.5",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "html-webpack-pug-plugin": "^2.0.0",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^2.6.1",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-pug-plugin": "^4.0.0",
+    "image-webpack-loader": "^8.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.0.1",
     "pug-html-loader": "^1.1.5",
+    "sass": "^1.69.5",
     "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^5.3.2",
     "jquery": "^3.5.1"
   }
 }
