--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack-dev-server --mode=development --config webpack.config.js --open",
-    "build": "webpack --mode=production --config webpack.config.js"
+    "dev": "webpack-dev-server --mode development --config webpack.config.js --open",
+    "build": "webpack --mode production --config webpack.config.js",
+    "deploy": "npm run build && gh-pages -d dist -b gh-test"
   },
   "keywords": [
     "pug",
@@ -24,6 +25,7 @@
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
+    "gh-pages": "^6.1.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.6.0",
     "html-webpack-pug-plugin": "^4.0.0",
